--- a/main.html
+++ b/main.html
@@ -8,7 +8,8 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<input type="button" id="btn" value="Submit"></input>
+	    <button type="button" id="btn">Submit</button>
+
 
     <script type="text/javascript" src="./script.js">
     </script>
