--- a/main.html
+++ b/main.html
@@ -8,11 +8,11 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	    <button type="button" id="btn">Submit button</button>
+	    <button type="submit" id="btn">Submit button</button>
 
 
     <script type="text/javascript" src="./script.js">
-    </script>
+</script>
 
 </body>
 
